service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  type: NodePort
  selector:
    app: 2048-game
  ports:
    - protocol: TCP
      name: game-service
      port: 80
      targetPort: 80
      nodePort: 30002
